--- a/client/views/template/homePage.html
+++ b/client/views/template/homePage.html
@@ -6,11 +6,11 @@
 <!-- NAVIGATIONS END --> 
 <!-- Main Page START -->
 <main id="main">
-  <div id="masthead" style="background-image:url(img/ghee.jpg); background-position:center; background-size:cover; height:300px" >
+  <div id="masthead" style="background-image:url(img/ghee_plate.jpg); background-position:center; background-size:cover; height:300px" >
     <div class="container"  align="center">
       <div class="row">
         <div class="col-md-12" style="padding-top:70px">
-          <h1 id="page0" style="font-family: 'Rock Salt', sans-serif;text-shadow: 3px 2px 4px black;">Dosa House</h1>
+          <h1 id="page0" style="font-family: 'Rock Salt', sans-serif;text-shadow: 3px 2px 4px black;">Chat and Chaat</h1>
           <p class="lead"  style="font-family: 'Montserrat', sans-serif;text-shadow: 1px 2px 2px black;">Quick. Fast. Food</p>
         </div>
       </div>
