Chat and chaat image

--- a/client/views/template/homePage.html
+++ b/client/views/template/homePage.html
@@ -6,7 +6,7 @@
 <!-- NAVIGATIONS END --> 
 <!-- Main Page START -->
 <main id="main">
-  <div id="masthead" style="background-image:url(img/ghee_plate.jpg); background-position:center; background-size:cover; height:300px" >
+  <div id="masthead" style="background-image:url(img/ghee1.jpg); background-position:center; background-size:cover; height:300px" >
     <div class="container"  align="center">
       <div class="row">
         <div class="col-md-12" style="padding-top:70px">
